# simple_cua

./: .gitignore  README.md  pyproject.toml
src/simple_cua/hybrid_orchestration_demo/: browser_excel_test.py  cmd_grid_test.py  gpt_ocr_test.py  orch_refactor_langraph.py  orch_refactor_semantic_kernel.py  orch_refactor_stable.py  orch_refactor_stable_2.py  orch_refactor_stable_3.py  orch_refactor_wip.py  orchestration_example.py  pyautogui_test.py
src/simple_cua/omni_ui_agent/src/: agent_run.py  hello_world.py  vision_extract.py
